--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         <link rel="stylesheet" type="text/css" href="css/jquery-ui.css">
         <script type='text/javascript' src="js/jquery-ui.js"></script>
 
+        <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,400,600,700,300' rel='stylesheet' type='text/css'>
+
+
 
         <link rel="stylesheet" href="css/panelstyle.css"/>
         <script type="text/javascript" src="js/config.js"></script>
