--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 				<div class="col-lg-8 col-lg-offset-2">
 					<div class="wow bounceInDown" data-wow-delay="0.4s">
 					<div class="section-heading">
-					<h2>About WATER</h2>
+					<h2>Water Health Awareness</h2>
 					<!--<i class="fa fa-2x fa-angle-down"></i>-->
 
 					</div>
@@ -160,12 +160,29 @@
 				<div class="wow bounceInUp" data-wow-delay="0.2s">
                 <div class="team boxed-grey">
                     <div class="inner">
-						<h5>American Embessy</h5>
-                        <p class="subtitle">Supported By</p>
+                        <p class="subtitle">Supported by</p>
+<!--						<h5>American Embassy</h5>-->
+
                         <div class="avatar"><img src="img/team/1.jpg" alt="" class="img-responsive img-circle" /></div>
                     </div>
                 </div>
 				</div>
+
+                <div class="wow bounceInUp shift-up" data-wow-delay="1s">
+                <div class="team boxed-grey">
+                    <div class="inner">
+                        <p class="subtitle">System Designed and Developed by</p>
+<!--						<h5>Kathmandu Living Labs</h5>-->
+
+                        <div class="avatar"><img src="img/team/4.jpg" alt="" class="img-responsive img-circle" /></div>
+
+                    </div>
+                </div>
+				</div>
+            </div>
+
+            <div class="col-xs-6 col-sm-3 col-md-3">
+
             </div>
 
 
@@ -173,34 +190,23 @@
 				<div class="wow bounceInUp" data-wow-delay="0.8s">
                 <div class="team boxed-grey">
                     <div class="inner">
-						<h5>You, We, All of us</h5>
-                        <p class="subtitle">Get to know the water we drink.</p>
-                        <div class="avatar">South Asia is endowed with some of the world’s greatest rivers, many of which wind through the region from their headwaters in the “water towers” of the Himalayan-Hindu Kush mountain range. While South Asia’s great transboundary rivers bind the region together environmentally, economically, and spiritually, these rivers also face increasing challenges.
+						<h5>Water in South Asia</h5>
+<!--                        <p class="subtitle"></p>-->
+                        <div class="avatar">South Asia is endowed with some of the world's greatest rivers, many of which wind through the region from their headwaters in the "water towers" of the Himalayan-Hindu Kush mountain range. While South Asia's great transboundary rivers bind the region together environmentally, economically, and spiritually, these rivers also face increasing challenges.
 
-Despite its great rivers, South Asia is one of the world’s most water-stressed regions: per capita water availability has fallen by 70% since 1950.  And the situation is worsening as rising water demand coincides with dropping groundwater tables and increasingly unpredictable hydrological cycles.  Additional water stress is created as South Asia’s population of 1.5 billion is growing by about 25 million people per year.  Simultaneously, rising standards of living mean citizens look for better access to healthy drinking water (water security), to affordable energy (energy security), and to nutritious food (food security).
+Despite its great rivers, South Asia is one of the world's most water-stressed regions: per capita water availability has fallen by 70% since 1950.  And the situation is worsening as rising water demand coincides with dropping groundwater tables and increasingly unpredictable hydrological cycles.  Additional water stress is created as South Asia's population of 1.5 billion is growing by about 25 million people per year.  Simultaneously, rising standards of living mean citizens look for better access to healthy drinking water (water security), to affordable energy (energy security), and to nutritious food (food security).
 
-Sustainable use of South Asia’s water resources – which will support sustainable development of agriculture, hydropower, public health, and the aquatic environment – calls for a robust understanding of the state of water in South Asia.  This website is intended to support students in developing more awareness of water issues as “citizen scientists” through a hands-on engagement in monitoring water quality in their area and inputting the data into a common shared website. </div>
+Sustainable use of South Asia's water resources, which will support sustainable development of agriculture, hydropower, public health, and the aquatic environment, calls for a robust understanding of the state of water in South Asia.  This website is intended to support students in developing more awareness of water issues as â€œcitizen scientistsâ€ through a hands-on engagement in monitoring water quality in their area and inputting the data into a common shared website. </div>
 
-                    Empowering Citizen Scientists on Water Health:  Water potability is an increasingly important environmental and health issue in South Asia.  The “health” of water can be analyzed with a wide range of relatively inexpensive and easy-to-use testing kits.  Geographic Information Systems (GIS) platforms can enable data on water health from such kits to be entered into a user-friendly and accessible format that can allow citizens to better understand the health of their drinking water.
+                    <h5>Empowering Citizen Scientists on Water Health</h5><div>Water potability is an increasingly important environmental and health issue in South Asia.  The â€œhealthâ€ of water can be analyzed with a wide range of relatively inexpensive and easy-to-use testing kits.  Geographic Information Systems (GIS) platforms can enable data on water health from such kits to be entered into a user-friendly and accessible format that can allow citizens to better understand the health of their drinking water.
 
-This project engages and empowers youth throughout the region (starting in Nepal, India and Sri Lanka) as “citizen scientists” who will make scientific measurements of “water health” which can be analyzed with easy-to-use testing kits that look at a variety of indicators. This information will be entered into a mobile phone hosting our newly developed digital outreach Geographic Information Systems (GIS) data platform, so that students and others can better understand the health of their water, compare it to the health of drinking water in other countries, and gain a better appreciation of the nature of South Asia’s water resources.
+This project engages and empowers youth throughout the region (starting in Nepal, India and Sri Lanka) as "citizen scientists" who will make scientific measurements of "water health" which can be analyzed with easy-to-use testing kits that look at a variety of indicators. This information will be entered into a mobile phone hosting our newly developed digital outreach Geographic Information Systems (GIS) data platform, so that students and others can better understand the health of their water, compare it to the health of drinking water in other countries, and gain a better appreciation of the nature of South Asia's water resources.
 
-The major objectives of this project are to 1) Encourage and empower students to engage in understanding the health of their drinking water and issues related to water health, 2) Create a GIS platform for students and citizens to compare water health in various locales, and 3) Support environmental and educational outreach programs.</div>
-                </div>
+The major objectives of this project are to<br/> 1) Encourage and empower students to engage in understanding the health of their drinking water and issues related to water health,<br/> 2) Create a GIS platform for students and citizens to compare water health in various locales, and<br/> 3) Support environmental and educational outreach programs.</div>
+                    </div></div>
 				</div>
             </div>
-			<div class="col-xs-6 col-sm-3 col-md-3">
-				<div class="wow bounceInUp" data-wow-delay="1s">
-                <div class="team boxed-grey">
-                    <div class="inner">
-						<h5>Kathmandu Living Labs</h5>
-                        <p class="subtitle">System Design and Development</p>
-                        <div class="avatar"><img src="img/team/4.jpg" alt="" class="img-responsive img-circle" /></div>
 
-                    </div>
-                </div>
-				</div>
-            </div>
         </div>
 		</div>
 	</section>
@@ -284,6 +290,71 @@ The major objectives of this project are to 1) Encourage and empower students to
                 </div>
 				</div>
             </div>
+            <div class="col-sm-3 col-md-3">
+				<div class="wow fadeInRight" data-wow-delay="0.2s">
+                <div class="service-box">
+					<div class="service-icon">
+						<img src="img/icons/service-icon-4.png" alt="" />
+					</div>
+					<div class="service-desc">
+						<h5>Turbidity</h5>
+						<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
+					</div>
+                </div>
+				</div>
+            </div>
+            <div class="col-sm-3 col-md-3">
+				<div class="wow fadeInRight" data-wow-delay="0.2s">
+                <div class="service-box">
+					<div class="service-icon">
+						<img src="img/icons/service-icon-4.png" alt="" />
+					</div>
+					<div class="service-desc">
+						<h5>Dissolved Oxygen Content</h5>
+						<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
+					</div>
+                </div>
+				</div>
+            </div>
+            <div class="col-sm-3 col-md-3">
+				<div class="wow fadeInRight" data-wow-delay="0.2s">
+                <div class="service-box">
+					<div class="service-icon">
+						<img src="img/icons/service-icon-4.png" alt="" />
+					</div>
+					<div class="service-desc">
+						<h5>Phosphates</h5>
+						<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
+					</div>
+                </div>
+				</div>
+            </div>
+            <div class="col-sm-3 col-md-3">
+				<div class="wow fadeInRight" data-wow-delay="0.2s">
+                <div class="service-box">
+					<div class="service-icon">
+						<img src="img/icons/service-icon-4.png" alt="" />
+					</div>
+					<div class="service-desc">
+						<h5>Nitrates</h5>
+						<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
+					</div>
+                </div>
+				</div>
+            </div>
+            <!--<div class="col-sm-3 col-md-3">
+				<div class="wow fadeInRight" data-wow-delay="0.2s">
+                <div class="service-box">
+					<div class="service-icon">
+						<img src="img/icons/service-icon-4.png" alt="" />
+					</div>
+					<div class="service-desc">
+						<h5>Worms and Insects</h5>
+						<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
+					</div>
+                </div>
+				</div>
+            </div>-->
         </div>
 		</div>
 	</section>
