--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
             <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
       <ul class="nav navbar-nav">
         <li class="active"><a href="#intro">Map</a></li>
-        <li><a href="#about">About WATER</a></li>
+        <li><a href="#about">About</a></li>
 		<li><a href="#service">The Parameters</a></li>
-		<li><a href="#contact">The Kit</a></li>
+<!--		<li><a href="#contact">The Kit</a></li>-->
         <!--<li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
           <ul class="dropdown-menu">
@@ -364,6 +364,7 @@ The major objectives of this project are to<br/> 1) Encourage and empower studen
 
 
 	<!-- Section: contact -->
+    <!--
     <section id="contact" class="home-section text-center">
 		<div class="heading-contact">
 			<div class="container">
@@ -402,6 +403,7 @@ The major objectives of this project are to<br/> 1) Encourage and empower studen
 
 		</div>
 	</section>
+    -->
 
 	<footer>
 		<div class="container">
