(1) Add Kathmandu Living Labs logo with text (2) Justify Text-alignment in "About" Section (3) Make logos clickable (4) Rectified License Terms, case at footer (5) Set map bounds

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                         <p class="subtitle">Supported by</p>
 <!--						<h5>American Embassy</h5>-->
 
-                        <div class="avatar"><img src="img/team/1.jpg" alt="" class="img-responsive img-circle" /></div>
+                        <div class="avatar"><a href="http://nepal.usembassy.gov/" target="_blank"><img src="img/team/1.jpg" alt="" class="img-responsive img-circle" /></a></div>
                     </div>
                 </div>
 				</div>
@@ -174,7 +174,7 @@
                         <p class="subtitle">System Designed and Developed by</p>
 <!--						<h5>Kathmandu Living Labs</h5>-->
 
-                        <div class="avatar"><img src="img/team/4.jpg" alt="" class="img-responsive img-circle" /></div>
+                        <div class="avatar"><a href="http://kathmandulivinglabs.org/" target="_blank"><img src="img/team/4.jpg" alt="" class="img-responsive img-circle" /></a></div>
 
                     </div>
                 </div>
@@ -416,7 +416,7 @@ The major objectives of this project are to<br/> 1) Encourage and empower studen
 						</a>
 					</div>
 					</div>
-					<p>&copy;Kathmandu living labs, CC-BY-SA.</p>
+                                    <a href="http://www.kathmandulivinglabs.org/" target="_blank"><p>&copy;Kathmandu Living Labs</p></a>
 				</div>
 			</div>
 		</div>
