--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                     <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="index.html">
-                    <h1>WATER</h1>
+                <a class="navbar-brand">
+                    <h1>WATER</h1><p class="sub-title">Youth as Citizen Scientists</p>
                 </a>
             </div>
 
