--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ The major objectives of this project are to<br/> 1) Encourage and empower studen
 				<div class="wow fadeInLeft" data-wow-delay="0.2s">
                 <div class="service-box">
 					<div class="service-icon">
-						<img src="img/icons/service-icon-1.png" alt="" />
+						<img src="img/icons/ph-icon.png" alt="" />
 					</div>
 					<div class="service-desc">
 						<h5>Acidity</h5>
@@ -263,7 +263,7 @@ The major objectives of this project are to<br/> 1) Encourage and empower studen
 				<div class="wow fadeInUp" data-wow-delay="0.2s">
                 <div class="service-box">
 					<div class="service-icon">
-						<img src="img/icons/service-icon-2.png" alt="" />
+						<img src="img/icons/arsenic-icon.png" alt="" />
 					</div>
 					<div class="service-desc">
 						<h5>Arsenic</h5>
@@ -276,7 +276,7 @@ The major objectives of this project are to<br/> 1) Encourage and empower studen
 				<div class="wow fadeInUp" data-wow-delay="0.2s">
                 <div class="service-box">
 					<div class="service-icon">
-						<img src="img/icons/service-icon-3.png" alt="" />
+						<img src="img/icons/coliform-icon.png" alt="" />
 					</div>
 					<div class="service-desc">
 						<h5>Coliform</h5>
@@ -289,7 +289,7 @@ The major objectives of this project are to<br/> 1) Encourage and empower studen
 				<div class="wow fadeInRight" data-wow-delay="0.2s">
                 <div class="service-box">
 					<div class="service-icon">
-						<img src="img/icons/service-icon-4.png" alt="" />
+						<img src="img/icons/biochem-icon.png" alt="" />
 					</div>
 					<div class="service-desc">
 						<h5>Biological Content</h5>
@@ -302,7 +302,7 @@ The major objectives of this project are to<br/> 1) Encourage and empower studen
 				<div class="wow fadeInRight" data-wow-delay="0.2s">
                 <div class="service-box">
 					<div class="service-icon">
-						<img src="img/icons/service-icon-4.png" alt="" />
+						<img src="img/icons/turbidity-icon.png" alt="" />
 					</div>
 					<div class="service-desc">
 						<h5>Turbidity</h5>
@@ -315,10 +315,10 @@ The major objectives of this project are to<br/> 1) Encourage and empower studen
 				<div class="wow fadeInRight" data-wow-delay="0.2s">
                 <div class="service-box">
 					<div class="service-icon">
-						<img src="img/icons/service-icon-4.png" alt="" />
+						<img src="img/icons/oxygen-icon.png" alt="" />
 					</div>
 					<div class="service-desc">
-						<h5>Dissolved Oxygen Content</h5>
+						<h5>Dissolved Oxygen</h5>
 						<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
 					</div>
                 </div>
@@ -328,7 +328,7 @@ The major objectives of this project are to<br/> 1) Encourage and empower studen
 				<div class="wow fadeInRight" data-wow-delay="0.2s">
                 <div class="service-box">
 					<div class="service-icon">
-						<img src="img/icons/service-icon-4.png" alt="" />
+						<img src="img/icons/phosphate-icon.png" alt="" />
 					</div>
 					<div class="service-desc">
 						<h5>Phosphates</h5>
@@ -341,10 +341,23 @@ The major objectives of this project are to<br/> 1) Encourage and empower studen
 				<div class="wow fadeInRight" data-wow-delay="0.2s">
                 <div class="service-box">
 					<div class="service-icon">
-						<img src="img/icons/service-icon-4.png" alt="" />
+						<img src="img/icons/nitrate-icon.png" alt="" />
 					</div>
 					<div class="service-desc">
 						<h5>Nitrates</h5>
+						<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
+					</div>
+                </div>
+				</div>
+            </div>
+            <div class="col-sm-3 col-md-3">
+				<div class="wow fadeInRight" data-wow-delay="0.2s">
+                <div class="service-box">
+					<div class="service-icon">
+						<img src="img/icons/insect.png" alt="" />
+					</div>
+					<div class="service-desc">
+						<h5>Benthic Macro-invertebrates</h5>
 						<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
 					</div>
                 </div>
