--- a/index.html
+++ b/index.html
@@ -263,58 +263,7 @@
                 </div>
 				</div>
             </div>
-			<div class="col-sm-3 col-md-3">
-				<div class="wow fadeInUp" data-wow-delay="0.2s">
-                <div class="service-box">
-					<div class="service-icon">
-						<img src="img/icons/arsenic-icon.png" alt="" />
-					</div>
-					<div class="service-desc">
-						<h5>Arsenic</h5>
-						<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
-					</div>
-                </div>
-				</div>
-            </div>
-			<div class="col-sm-3 col-md-3">
-				<div class="wow fadeInUp" data-wow-delay="0.2s">
-                <div class="service-box">
-					<div class="service-icon">
-						<img src="img/icons/coliform-icon.png" alt="" />
-					</div>
-					<div class="service-desc">
-						<h5>Coliform</h5>
-						<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
-					</div>
-                </div>
-				</div>
-            </div>
-			<div class="col-sm-3 col-md-3">
-				<div class="wow fadeInRight" data-wow-delay="0.2s">
-                <div class="service-box">
-					<div class="service-icon">
-						<img src="img/icons/biochem-icon.png" alt="" />
-					</div>
-					<div class="service-desc">
-						<h5>Biological Content</h5>
-						<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
-					</div>
-                </div>
-				</div>
-            </div>
-            <div class="col-sm-3 col-md-3">
-				<div class="wow fadeInRight" data-wow-delay="0.2s">
-                <div class="service-box">
-					<div class="service-icon">
-						<img src="img/icons/turbidity-icon.png" alt="" />
-					</div>
-					<div class="service-desc">
-						<h5>Turbidity</h5>
-						<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
-					</div>
-                </div>
-				</div>
-            </div>
+
             <div class="col-sm-3 col-md-3">
 				<div class="wow fadeInRight" data-wow-delay="0.2s">
                 <div class="service-box">
@@ -328,19 +277,49 @@
                 </div>
 				</div>
             </div>
-            <div class="col-sm-3 col-md-3">
-				<div class="wow fadeInRight" data-wow-delay="0.2s">
+
+			<div class="col-sm-3 col-md-3">
+				<div class="wow fadeInUp" data-wow-delay="0.2s">
                 <div class="service-box">
 					<div class="service-icon">
-						<img src="img/icons/phosphate-icon.png" alt="" />
+						<img src="img/icons/arsenic-icon.png" alt="" />
 					</div>
 					<div class="service-desc">
-						<h5>Phosphates</h5>
+						<h5>Arsenic</h5>
 						<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
 					</div>
                 </div>
 				</div>
             </div>
+
+            <div class="col-sm-3 col-md-3">
+				<div class="wow fadeInRight" data-wow-delay="0.2s">
+                <div class="service-box">
+					<div class="service-icon">
+						<img src="img/icons/turbidity-icon.png" alt="" />
+					</div>
+					<div class="service-desc">
+						<h5>Turbidity</h5>
+						<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
+					</div>
+                </div>
+				</div>
+            </div>
+
+            <div class="col-sm-3 col-md-3">
+				<div class="wow fadeInRight" data-wow-delay="0.2s">
+                <div class="service-box">
+					<div class="service-icon">
+						<img src="img/icons/biochem-icon.png" alt="" />
+					</div>
+					<div class="service-desc">
+						<h5>Biochemical Oxygen Demand</h5>
+						<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
+					</div>
+                </div>
+				</div>
+            </div>
+
             <div class="col-sm-3 col-md-3">
 				<div class="wow fadeInRight" data-wow-delay="0.2s">
                 <div class="service-box">
@@ -354,6 +333,35 @@
                 </div>
 				</div>
             </div>
+
+            <div class="col-sm-3 col-md-3">
+				<div class="wow fadeInRight" data-wow-delay="0.2s">
+                <div class="service-box">
+					<div class="service-icon">
+						<img src="img/icons/phosphate-icon.png" alt="" />
+					</div>
+					<div class="service-desc">
+						<h5>Phosphates</h5>
+						<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
+					</div>
+                </div>
+				</div>
+            </div>
+
+			<div class="col-sm-3 col-md-3">
+				<div class="wow fadeInUp" data-wow-delay="0.2s">
+                <div class="service-box">
+					<div class="service-icon">
+						<img src="img/icons/coliform-icon.png" alt="" />
+					</div>
+					<div class="service-desc">
+						<h5>Coliform</h5>
+						<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
+					</div>
+                </div>
+				</div>
+            </div>
+
             <div class="col-sm-3 col-md-3">
 				<div class="wow fadeInRight" data-wow-delay="0.2s">
                 <div class="service-box">
