water parameters' descriptions;

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 					</div>
 					<div class="service-desc">
 						<h5>Acidity</h5>
-						<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
+						<p>pH is the scale used to measure the acidity of water.</p>
 					</div>
                 </div>
 				</div>
@@ -272,7 +272,7 @@
 					</div>
 					<div class="service-desc">
 						<h5>Dissolved Oxygen</h5>
-						<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
+						<p>DO, or Dissolved Oxygen, is a measure of how much oxygen is dissolved in water.</p>
 					</div>
                 </div>
 				</div>
@@ -286,7 +286,7 @@
 					</div>
 					<div class="service-desc">
 						<h5>Arsenic</h5>
-						<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
+						<p>Arsenic is a naturally occuring element in the Earth's crust.</p>
 					</div>
                 </div>
 				</div>
@@ -300,7 +300,7 @@
 					</div>
 					<div class="service-desc">
 						<h5>Turbidity</h5>
-						<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
+						<p>Turbidity is a measure of the water’s lack of clarity.</p>
 					</div>
                 </div>
 				</div>
@@ -314,7 +314,7 @@
 					</div>
 					<div class="service-desc">
 						<h5>Biochemical Oxygen Demand</h5>
-						<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
+						<p>BOD, or Biochemical Oxygen Demand, is used as a measure of the degree of water pollution.</p>
 					</div>
                 </div>
 				</div>
@@ -328,7 +328,7 @@
 					</div>
 					<div class="service-desc">
 						<h5>Nitrates</h5>
-						<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
+						<p>Nitrate is an essential nutrient for aquatic plants and animals and is the form in which plants utilise nitrogen.</p>
 					</div>
                 </div>
 				</div>
@@ -342,7 +342,7 @@
 					</div>
 					<div class="service-desc">
 						<h5>Phosphates</h5>
-						<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
+						<p>Phosphorus is essential for plant growth and metabolic reactions in animals and plants.</p>
 					</div>
                 </div>
 				</div>
@@ -355,8 +355,8 @@
 						<img src="img/icons/coliform-icon.png" alt="" />
 					</div>
 					<div class="service-desc">
-						<h5>Coliform</h5>
-						<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
+						<h5>Coliform Bacteria</h5>
+						<p>Coliform Bacteria are rod-shaped bacteria found in the intestinal tract of humans and other animals. Its presence in water indicates fecal contamination and can cause diarrhea and other dysenteric symptoms.</p>
 					</div>
                 </div>
 				</div>
@@ -370,7 +370,7 @@
 					</div>
 					<div class="service-desc">
 						<h5>Benthic Macro-invertebrates</h5>
-						<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
+						<p>Benthic macroinvertebrates are animals without backbones, that are visible with the naked eye, living on the bottoms of streams, river, lakes, and ponds.</p>
 					</div>
                 </div>
 				</div>
