--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                 </div>
 				</div>
 
-                <div class="wow bounceInUp" data-wow-delay="0.2s">
+                <div class="wow bounceInUp shift-up" data-wow-delay="0.2s">
                 <div class="team boxed-grey">
                     <div class="inner">
                         <p class="subtitle">Supported by</p>
