water-fav-icon.png;

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
     <title>WATER</title>
 
+    <link rel="shortcut icon" type="image/png" href="img/icons/water-fav-icon.png"/>
+
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
 
