(1) Change of KLL logo in attribution (2) Change of Water Parameter Text

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 					</div>
 					<div class="service-desc">
 						<h5>Acidity</h5>
-						<p>pH is the scale used to measure the acidity of water.</p>
+						<p>is measured in terms of pH. Generally, pH between 6 and 8.5 is ideal for drinking water.</p>
 					</div>
                 </div>
 				</div>
@@ -276,7 +276,7 @@
 					</div>
 					<div class="service-desc">
 						<h5>Dissolved Oxygen</h5>
-						<p>DO, or Dissolved Oxygen, is a measure of how much oxygen is dissolved in water.</p>
+						<p>helps aquatic lives thrive. But too much of Dissolved Oxygen causes corrosion in metal pipes.</p>
 					</div>
                 </div>
 				</div>
@@ -290,7 +290,7 @@
 					</div>
 					<div class="service-desc">
 						<h5>Arsenic</h5>
-						<p>Arsenic is a naturally occuring element in the Earth's crust.</p>
+						<p>in drinking water causes bladder, lung and skin cancer, and may cause kidney and liver cancer.</p>
 					</div>
                 </div>
 				</div>
@@ -304,7 +304,7 @@
 					</div>
 					<div class="service-desc">
 						<h5>Turbidity</h5>
-						<p>Turbidity is a measure of the water’s lack of clarity.</p>
+						<p>is a measure of water’s clarity. However, low turbidity does not guaranteee lack of pathogens in water.</p>
 					</div>
                 </div>
 				</div>
@@ -318,7 +318,7 @@
 					</div>
 					<div class="service-desc">
 						<h5>Biochemical Oxygen Demand</h5>
-						<p>BOD, or Biochemical Oxygen Demand, is used as a measure of the degree of water pollution.</p>
+						<p>below 1 mg/L is desirable. Moderately polluted rivers may have a BOD value in the range of 2 to 8 mg/L.</p>
 					</div>
                 </div>
 				</div>
@@ -332,7 +332,7 @@
 					</div>
 					<div class="service-desc">
 						<h5>Nitrates</h5>
-						<p>Nitrate is an essential nutrient for aquatic plants and animals and is the form in which plants utilise nitrogen.</p>
+						<p>below 10 mg/L is desirable for drinking purposes. Nitrate levels at or above this level have adverse effects.</p>
 					</div>
                 </div>
 				</div>
@@ -346,7 +346,7 @@
 					</div>
 					<div class="service-desc">
 						<h5>Phosphates</h5>
-						<p>Phosphorus is essential for plant growth and metabolic reactions in animals and plants.</p>
+						<p>is essential for metabolic reactions in animals and plants. But excess phosphates cause eutrophication.</p>
 					</div>
                 </div>
 				</div>
@@ -360,7 +360,7 @@
 					</div>
 					<div class="service-desc">
 						<h5>Coliform Bacteria</h5>
-						<p>Coliform Bacteria are rod-shaped bacteria found in the intestinal tract of humans and other animals. Its presence in water indicates fecal contamination and can cause diarrhea and other dysenteric symptoms.</p>
+						<p>in water indicates fecal contamination and can cause diarrhea and other dysenteric symptoms.</p>
 					</div>
                 </div>
 				</div>
@@ -374,7 +374,7 @@
 					</div>
 					<div class="service-desc">
 						<h5>Benthic Macro-invertebrates</h5>
-						<p>Benthic macroinvertebrates are animals without backbones, that are visible with the naked eye, living on the bottoms of streams, river, lakes, and ponds.</p>
+						<p>serve as bioindicators of good water quality. When present in large numbers, it suggests the stream is in good condition.</p>
 					</div>
                 </div>
 				</div>
