--- a/index.html
+++ b/index.html
@@ -460,6 +460,8 @@
 		</div>
 	</footer>
 
+    <div class="timer-freezescreen"><img src="img/loader.gif"/></div>
+
     <!-- Core JavaScript Files -->
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.easing.min.js"></script>
