--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 
 
         <link rel="stylesheet" href="css/panelstyle.css"/>
+        <link rel="stylesheet" href="css/iefix.css"/>
+
         <script type="text/javascript" src="js/config.js"></script>
         <script type="text/javascript" src="js/data.js"></script>
         <script type="text/javascript" src="js/cartomancer.js"></script>
